Adopt text blocks syntax for multi-line strings.
srcs in:jt/c/g/copybara/
 config
 format
 go
 hashing
 hg
 onboard/core/template

BUG=474611285
GWSQ_IGNORE: rohitkhilnani@google.com
PiperOrigin-RevId: 856626596
Change-Id: Ibb78dbd9c78f625dc004fe537bd5a0ae3470dbdf